--- a/AlibabaProjectFrontend/Templates/main.html
+++ b/AlibabaProjectFrontend/Templates/main.html
@@ -1,9 +1,52 @@
-<!DOCTYPE html>
-    <html>
-    <head>
-        <title>Mi Primera Plantilla</title>
-    </head>
-    <body>
-        <h1>estamos dentro de una plantilla</h1>
-    </body>
-    </html>
+  <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Templates</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  </head>
+  <body>
+    <h1>Search your favourite products!!</h1>
+    <form class="d-flex justify-content-center align-items-center mb-2" action="" method="post">{% csrf_token %}
+        <input type="text" placeholder="Insert a product to search..." class="form-control me-2" name="input-product">
+        <button class="btn btn-primary" type="submit" name="search_btn">Search</button>
+    </form>
+    <section class="cards-container">
+      <form action="" method="post" class="d-flex flex-column justify-content-center align-items-start mb-2">{% csrf_token %}
+        <button class="btn btn-primary" type="submit" name="track_btn">Track!!</button>
+        {% for elem in product %}
+          <div class="card m-2 rounded">
+            <div class="card-body">
+              <h2 class="card-title">{{ elem.Title }}</h2>
+              <p class="card-valoration">Valoration: {{ elem.Score }}</p>
+              <p class="card-price">$ {{ elem.Price }}</p>
+              <label for=""><input type="checkbox" value="{{ elem.ID }}*{{ elem.Title }}*{{ elem.Score }}*{{ elem.Price }}*{{ elem.Image }}" name="products">TRACK!</label>
+            </div>
+            <div class="img-container m-2">
+              <img src="{{ elem.Image }}" alt="" class="card-image img-fluid">
+            </div>
+          </div>
+      {% endfor %}
+    </form>
+      <form action="" method="post" class="d-flex flex-column justify-content-center align-items-end mb-2">{% csrf_token %}
+        {% for telem in product_tracked %}
+          <div class="card m-2 rounded">
+          <div class="card-body">
+            <h2 class="card-title">{{ telem.Title }}</h2>
+            <p class="card-valoration">Valoration: {{ telem.Score }}</p>
+            <p class="card-price">$ {{ telem.Price }}</p>
+          </div>
+          <div class="img-container m-2">
+            <img src="{{ telem.Image }}" alt="" class="card-image img-fluid">
+          </div>
+        </div>
+    {% endfor %}
+  </form>
+    </section>
+  </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+</html>
